--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -289,31 +289,26 @@ html {
 -------------------------------------------------------------- */
 
 .widget {
-	margin-bottom: $text-margin-bottom;
+	@include border-radius(0 0 15px 15px);
+	background: #fff;
+	padding-bottom: 10px;
+	margin-bottom: 30px;
 
-	a {
-
-		&:hover {
-
-		}
-	}
-
-	ul {
-
-		ul {
-
-		}
-
-		li {
-
-		}
+	p,
+	div {
+		padding: 0 10px;
 	}
 }
 
 /* .widgettitle is a WordPress default */
 .widgettitle,
 .widget-title {
-	margin-bottom: 10px;
+	background: $gray;
+	color: #ddd;
+	font-size: 20px;
+	font-weight: 700;
+	padding: 25px 15px;
+	margin: 0 0 15px;
 }
 
 /* =Footer
