--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -122,6 +122,13 @@ html {
 
 #wp-brasil-map {
 	height: 295px;
+
+	iframe {
+		height: 295px;
+		margin: 0;
+		padding: 0;
+		width: 100%;
+	}
 }
 
 /* =Main Navigation
