--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -377,10 +377,45 @@ html {
 -------------------------------------------------------------- */
 
 #footer {
-	border-top: 1px solid #ddd;
+	background-color: $navbar-default-bg;
+	border-color: $navbar-default-border;
 	margin-top: 20px;
 	padding: 20px 0 20px;
-	text-align: center;
+	.footer-area {
+		color: $navbar-default-color;
+		p img {
+			margin-top: 0;
+		}
+		a {
+			color: #8ccce3;
+		}
+	}
+	.logo-area {
+		padding: 20px 30px;
+		background-color: #f4f4f4;
+		box-shadow: 0 -10px 50px rgba(0,0,0,.3);
+		margin-bottom: -80px;
+		top: -60px;
+		vertical-align: middle;
+	}
+	.logo-image {
+		display: inline-block;
+		float: left;
+		margin-right: 10px;
+	}
+	.logo-title {
+		display: block;
+		line-height: 100%;
+		top: 10px;
+		position: relative;
+		font: {
+			size: 220%;
+			weight: bold;
+		}
+		span {
+			color: $brand-primary;
+		}
+	}
 }
 
 /* =Error 404 page
