--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -142,7 +142,6 @@ html {
 #branding {
 	padding: 30px 0;
 	background: url(../images/header.jpg) center center no-repeat;
-	margin-bottom: 20px;
 }
 
 #header-buttons {
@@ -183,6 +182,10 @@ html {
 
 /* =Content
 -------------------------------------------------------------- */
+
+#main {
+	padding-top: 20px;
+}
 
 .hentry {
 	background: $white;
