css widget search

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -369,6 +369,11 @@ html {
 	}
 }
 
+.widget_search {
+ border-radius: 12px;
+ padding: top: 10px;
+}
+
 /* .widgettitle is a WordPress default */
 .widgettitle,
 .widget-title {
