--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -70,6 +70,11 @@ Description: Comunidade WordPress-BR main stylesheet.
 html {
 	overflow-y: scroll;
 }
+body {
+	background-image: url(../images/texture-footer.jpg);
+	background-position: center bottom;
+	background-repeat: no-repeat;
+}
 
 /* =Header
 -------------------------------------------------------------- */
