--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -169,6 +169,77 @@ body {
 	}
 }
 
+#archive-categories {
+	margin: 30px 0 0;
+	height: 100px;
+	position: relative;
+
+	h3 {
+		color: $brand-primary;
+		font-size: 30px;
+		font-weight: 700;
+		text-transform: uppercase;
+	}
+
+	&:before {
+		background: #5d9db9 url(../images/blue-arrow.png) center left no-repeat;
+		content: " ";
+		position: absolute;
+		height: 90px;
+		width: 50%;
+		right: 0;
+	}
+}
+
+#archive-categories-menu {
+	h3,
+	ul {
+		padding-left: 20px;
+	}
+
+	h3 {
+		margin: 10px 0 15px;
+	}
+
+	ul {
+		list-style: none;
+		margin: 0;
+	}
+
+	li {
+		border-right: 1px solid $brand-primary;
+		float: left;
+		margin-right: 20px;
+		padding-right: 20px;
+	}
+
+	.last {
+		border: none;
+		margin: 0;
+		padding: 0;
+	}
+
+	a {
+		font-size: 16px;
+	}
+}
+
+#archive-categories-register {
+	color: $white;
+	font-size: 25px;
+	font-style: italic;
+
+	p {
+		padding: 25px 0 0 40px;
+		margin: 0;
+	}
+
+	a {
+		color: #13506d;
+	}
+}
+
+
 /* =Content
 -------------------------------------------------------------- */
 
