updated the top menu to fixed

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -70,6 +70,7 @@ Description: Comunidade WordPress-BR main stylesheet.
 html {
 	overflow-y: scroll;
 }
+
 body {
 	background-image: url(../images/texture-footer.jpg);
 	background-position: center bottom;
@@ -80,7 +81,7 @@ body {
 -------------------------------------------------------------- */
 
 #header {
-
+	margin-top: 28px;
 }
 
 .site-title {
@@ -109,6 +110,10 @@ body {
 		padding-top: 20px;
 		text-transform: uppercase;
 	}
+
+	.admin-bar & {
+		top: 28px;
+	}
 }
 
 #top-navigation-icon {
@@ -117,6 +122,7 @@ body {
 	margin: 11px 0 0;
 	width: 95px;
 }
+
 
 /* =Map
 -------------------------------------------------------------- */
@@ -145,8 +151,8 @@ body {
 -------------------------------------------------------------- */
 
 #branding {
-	padding: 30px 0;
 	background: url(../images/header.jpg) center center no-repeat;
+	padding: 30px 0;
 }
 
 #header-buttons {
@@ -238,7 +244,6 @@ body {
 		color: #13506d;
 	}
 }
-
 
 /* =Content
 -------------------------------------------------------------- */
