--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -539,6 +539,10 @@ body {
 	margin-top: 20px;
 	padding: 20px 0 20px;
 
+	@media (max-width: $screen-sm-max) {
+		padding-bottom: 0;
+	}
+
 	.footer-area {
 		color: $navbar-default-color;
 		margin-top: 13px;
@@ -554,6 +558,13 @@ body {
 		a {
 			color: #8ccce3;
 		}
+
+		@media (max-width: $screen-xs-max) {
+			.text-left, .text-right {
+				text-align: center;
+				margin-bottom: 5px;
+			}
+		}
 	}
 
 	.logo-area {
@@ -562,6 +573,12 @@ body {
 		margin-bottom: -80px;
 		padding: 20px 30px;
 		top: -60px;
+		text-align: center;
+
+		@media (max-width: $screen-sm-max) {
+			position: static;
+			margin: 20px 0 0 0;
+		}
 	}
 
 	.logo-image {
@@ -569,6 +586,12 @@ body {
 		float: left;
 		position: relative;
 		margin-right: 10px;
+
+		@media (max-width: $screen-md-max) {
+			display: inline;
+			float: none;
+			margin: 0
+		}
 	}
 
 	.logo-title {
@@ -584,30 +607,8 @@ body {
 		span {
 			color: $brand-primary;
 		}
-	}
-}
 
-/* =Responsive adjustments
--------------------------------------------------------------- */
-@media (max-width: $screen-md-max) {
-	#footer {
-
-		.footer-area {
-			margin-top: 0;
-		}
-
-		.logo-area {
-			margin-bottom: 0;
-			top: 10px;
-			text-align: center;
-		}
-
-		.logo-image {
-			float: none;
-			display: inline-block;
-		}
-
-		.logo-title {
+		@media (max-width: $screen-md-max) {
 			display: inline-block;
 		}
 	}
