Adjust hover subitem to SASS variable

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -111,7 +111,7 @@ body {
 -------------------------------------------------------------- */
 .navbar-nav > li li a {
 	&:hover {
-		background: #EAECDE
+		background: $body-bg;
 	}
 }
 
