--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -458,20 +458,21 @@ body {
 	font-size: 13px;
 	line-height: 22px;
 
-	li.comment, li.pingback {
+	li.comment,
+	li.pingback {
 		@include clearfix();
+		border-top: 1px solid $white;
 		list-style: none;
-		border-bottom: 1px solid $gray;
-		padding: 10px 0;
-		&:last-child {
-			border-bottom: none;
+		margin-bottom: 0;
+		padding: 10px 0 0;
+
+		&:first-child {
+			border: none;
 		}
 	}
 
-	.children {
-		li:last-child {
-			border-bottom: none;
-		}
+	.children li:first-child {
+		border-top: 1px solid $white;
 	}
 
 	.comment-meta {
@@ -483,7 +484,9 @@ body {
 			font-size: 13px;
 			font-weight: 600;
 		}
-		a, .fn {
+
+		a,
+		.fn {
 			color: #444;
 
 			&:hover {
@@ -492,6 +495,7 @@ body {
 			}
 		}
 	}
+
 	.comment-author {
 		img {
 			float: left;
@@ -504,6 +508,10 @@ body {
 		margin-top: 5px;
 		font-weight: bold;
 		color: #333;
+	}
+
+	.reply {
+		margin-bottom: 5px;
 	}
 }
 
