--- a/assets/sass/wordpress/_wordpress.scss
+++ b/assets/sass/wordpress/_wordpress.scss
@@ -12,6 +12,7 @@
 
 @import "widgets/calendar";
 @import "widgets/search";
+@import "widgets/jetpack-subscription";
 
 /* =Wordpress Core Shortcodes
 -------------------------------------------------------------- */
