--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -381,6 +381,24 @@ body {
 		.entry-meta {
 			bottom: 50%;
 			margin-bottom: -29px;
+
+			@media (max-width: $screen-xs-max) {
+				@include border-radius(0);
+				position: static;
+				bottom: 0;
+				width: 100%;
+				margin-bottom: 0;
+			}
+		}
+		
+		@media (max-width: $screen-xs-max) {
+			height: 51px;
+		}
+	}
+
+	.featured-default {
+		@media (max-width: $screen-xs-max) {
+			display:none;
 		}
 	}
 
