Better Facebook box alignment
fixes #20

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -566,6 +566,13 @@ body {
 	}
 }
 
+.widget_facebook_likebox {
+	text-align: center;
+	h3 {
+		text-align: left;
+	}
+}
+
 /* =Footer
 -------------------------------------------------------------- */
 
