--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -310,10 +310,31 @@ body {
 .entry-title {
 	color: $brand-primary;
 	font-size: 30px;
-	font-weight: 400;
+	font-weight: 700;
 	margin: 0;
 	padding: 20px;
 	text-transform: uppercase;
+}
+
+.author-list.biography {
+	display:none;
+	}
+
+.author-info {
+    background: none repeat scroll 0 0 #DDDDDD;
+    margin-bottom: 20px;
+    padding: 20px;
+    line-height: 1.5;
+}
+
+.author-info h2 {
+	margin-top: 0px;
+}
+
+span.author-avatar {
+	float: left;
+	margin-bottom: 5px;
+	margin-right: 10px;
 }
 
 .page-header {
@@ -408,6 +429,7 @@ body {
 		float: right;
 		margin: 7px 10px 0 0;
 	}
+
 
 	.sep {
 		font-size: 80%;
